small z-index bug fix

--- a/src/mini-apps/cartomancy/cartomancy.css
+++ b/src/mini-apps/cartomancy/cartomancy.css
@@ -102,7 +102,6 @@ body {
   cursor: move;
   transition: opacity 1s ease;
   transition: 300ms ease-in-out;
-  z-index: -1;
 }
 
 .pickContainer.p2 {
@@ -122,7 +121,6 @@ body {
   margin: 20px;
   cursor: move;
   transition: opacity 1s ease;
-  z-index: -1;
 
 }
 .pickContainer.p3 {
@@ -142,7 +140,6 @@ body {
   cursor: move;
   transition: opacity 1s ease;
   transition: 300ms ease-in-out;
-  z-index: -1;
 }
 
 .read-fortune-space {
